fix: color picker overflow 수정(flex-wrap)

--- a/client/src/components/PaymentTypeAddModal/index.scss
+++ b/client/src/components/PaymentTypeAddModal/index.scss
@@ -15,7 +15,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 80%;
+  max-width: 500px;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), 0px 4px 20px rgba(0, 0, 0, 0.1);
@@ -88,11 +89,13 @@
     padding: 0;
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
     flex-grow: 1;
     &--item {
       padding: 2px;
       margin-right: 1rem;
       border-radius: 4px;
+      border: 1px solid transparent;
       .box {
         pointer-events: none;
         border-radius: 4px;
@@ -101,7 +104,7 @@
         background-color: turquoise;
       }
       &.select {
-        border: 1px solid $primary;
+        border: 1px solid red;
       }
     }
   }
